Attempts to fix the build (still not working)